updated New Scuttle Developments

--- a/_posts/2012-01-29-new-scuttle-developments.html
+++ b/_posts/2012-01-29-new-scuttle-developments.html
@@ -1,3 +1,9 @@
+---
+layout: post
+title: New Scuttle Developments
+tags: scuttle, bookmarking
+category: Open Source Projects
+---
 <img src=http://www.majorursa.net/sites/default/files/styles/large/public/field/image/scuttle-screenshot.png align=left>
 I am a big fan, user, and tinkerer of <a href=http://sourceforge.net/projects/scuttle/>Scuttle</a>: the Open Source <a href=http://en.wikipedia.org/wiki/Social_bookmarking>Social Bookmarking</a> System. In case you have never heard of it, Scuttle is similar to other social bookmarking web applications like Delicious and <a href="http://pinboard.in">Pinboard</a>. It allows you to save website bookmarks on a public site, so that other people can follow your bookmarks and you can follow other people with similar interests. Although unlike delicious and pinboard, most scuttle instances are decentralized with only a few users. So there is less of the social aspect. (That is until someone figures out how to federate all of the decentrailized installations.)
 
