--- a/_posts/2012-04-12-vim-emacs-regex.html
+++ b/_posts/2012-04-12-vim-emacs-regex.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Vim Emacs Regex Smackdown
-tags: vim, emacs
+tags: vim emacs
 category: Vim
 ---
 So, I was trying to convert an orgmode file to html. There is an orgmode-export-as-html function, but it was choking on something, so I needed to do the conversion by hand. I tried many, many times to convert the file with emacs regular expressions, but was unsuccessful.  The difficulty was the orgmode headlines, which look like this:
