added some more posts

--- a/_posts/2012-01-28-r-emacs-orgmode.html
+++ b/_posts/2012-01-28-r-emacs-orgmode.html
@@ -2,7 +2,7 @@
 layout: post
 title: R, Emacs, and Orgmode
 tags: R emacs orgmode data 
-categories: Data Analysis, Emacs
+categories: Emacs
 ---
 
 <div id="content">
