--- a/_posts/2012-01-28-tools-for-working-with-data.html
+++ b/_posts/2012-01-28-tools-for-working-with-data.html
@@ -2,7 +2,7 @@
 layout: post
 title: Tools for Working With Data
 tags: R emacs orgmode data
-categories: Data Analysis
+category: Data Analysis
 ---
 <div id="content">
 
