Added new theme with stripey bg

--- a/_posts/2010-04-05-knitting-stash.html
+++ b/_posts/2010-04-05-knitting-stash.html
@@ -2,7 +2,7 @@
 layout: post
 title: Knitting Stash, an Android App
 tags: android knitting java
-categories: Underhill Labs
+category: Underhill Labs
 ---
 Knitting Stash is a knitting app for android devices. It is a suite of tools that helps you keep track of your knitting needles, crochet hooks, projects and all of your counters.
 
