fixed divs on some posts

--- a/_posts/2010-04-05-knitting-stash.html
+++ b/_posts/2010-04-05-knitting-stash.html
@@ -6,7 +6,16 @@ category: Underhill Labs
 ---
 Knitting Stash is a knitting app for android devices. It is a suite of tools that helps you keep track of your knitting needles, crochet hooks, projects and all of your counters.
 
-<a href="http://www.flickr.com/photos/redbike/4491319543/" title="knittingstash project view by denverfiddler, on Flickr"><img src="http://farm5.static.flickr.com/4025/4491319543_85479e57db_m.jpg" width="160" height="240" alt="knittingstash project view" /></a>
+<h3>Screenshots</h3>
+<br>
+<p>
+<a href="http://www.flickr.com/photos/redbike/4491319543/" title="knittingstash project view by denverfiddler, on Flickr"><img src="http://farm5.static.flickr.com/4025/4491319543_85479e57db_m.jpg" width="250" xxheight="240" alt="knittingstash project view" /></a>
 
-<a href="http://www.flickr.com/photos/redbike/4491958248/" title="knittingstash knitting needle list  by denverfiddler, on Flickr"><img src="http://farm5.static.flickr.com/4068/4491958248_d864269490_m.jpg" width="160" height="240" alt="knittingstash knitting needle list " /></a>
+<br>
+<p>
+<a href="http://www.flickr.com/photos/redbike/4491958248/"   
+   title="knittingstash knitting needle list  by denverfiddler, on Flickr">
+<img src="http://farm5.static.flickr.com/4068/4491958248_d864269490_m.jpg"
+     width="250" xxheight="240" alt="knittingstash knitting needle list " />
+</a>
 
