--- a/_posts/2010-04-11-knitting-stash-0-5.html
+++ b/_posts/2010-04-11-knitting-stash-0-5.html
@@ -4,10 +4,17 @@ title: Knitting Stash version 0.5 released
 tags: android knitting
 category: Underhill Labs
 ---
-Knitting Stash version 0.5 has been released and is ready fro download
 
-<a href="http://www.flickr.com/photos/redbike/4508578496/" title="Knitting Stash tabs view by denverfiddler, on Flickr"><img src="http://farm5.static.flickr.com/4016/4508578496_af29306e8e_m.jpg" width="160" height="240" alt="Knitting Stash tabs view" /></a>
+<a href="http://www.flickr.com/photos/redbike/4508578496/"   title="Knitting Stash tabs view by denverfiddler, on Flickr">
+<img src="http://farm5.static.flickr.com/4016/4508578496_af29306e8e_m.jpg" width="160" height="240" alt="Knitting Stash tabs view" /></a>
 
-Version 0.5 changelog:
-<ul>added new tabbed interface to the home screen. (see the screen shot.)
-<ul>added visual cue to counter to show whether count is increasing or decreasing.
+<p>
+
+
+
+
+<h3>Version 0.5 changelog:</h3>
+<ul>
+<li>added new tabbed interface to the home screen. (see the screen shot.)</li>
+<li>added visual cue to counter to show whether count is increasing or decreasing.</li>
+</ul>
