--- a/_posts/2010-07-09-cool-things-to-do-emacs-dired.html
+++ b/_posts/2010-07-09-cool-things-to-do-emacs-dired.html
@@ -158,4 +158,4 @@ buffer, with a description of dired mode and a list of commands.
 
 </tbody>
 </table>
-<a href=http://denverdroid.blogspot.com/2011/07/cool-things-to-do-in-emacs-dired-mode.html>Cool Things to do in Emacs' Dired Mode</a><div class="blogger-post-footer"><img width='1' height='1' src='https://blogger.googleusercontent.com/tracker/7035860407900002000-6430511721541717440?l=denverdroid.blogspot.com' alt='' />
+<a href=http://denverdroid.blogspot.com/2011/07/cool-things-to-do-in-emacs-dired-mode.html>Cool Things to do in Emacs' Dired Mode</a>
