--- a/_posts/2012-04-14-sas-to-r.html
+++ b/_posts/2012-04-14-sas-to-r.html
@@ -15,30 +15,33 @@ it in R. (And actually it looks better in R too.)
 
 
 
+{% highlight r %}
+# read in data from file 
+gpa.data <- read.table("GPA.txt");
+# create multiple linear regression model
+gpa.fit <- lm(V4 ~ V1 + V2 + V3 + V5 + V6 + V7 + V8, data=gpa.data)
 
-<pre class="src src-R"><span style="color: #586e75; font-style: italic;"># </span><span style="color: #586e75; font-style: italic;">read in data from file </span>
-gpa.data <span style="color: #2aa198;">&lt;-</span> read.table(<span style="color: #2aa198;">"GPA.txt"</span>);
-<span style="color: #586e75; font-style: italic;"># </span><span style="color: #586e75; font-style: italic;">create multiple linear regression model</span>
-gpa.fit <span style="color: #2aa198;">&lt;-</span> lm(V4 ~ V1 + V2 + V3 + V5 + V6 + V7 + V8, data=gpa.data)
+# save residuals to a variable
+gpa.resid <- residuals(gpa.fit)
+# save Predicted values to a variable
+gpa.yhat <- fitted.values(gpa.fit)
 
-<span style="color: #586e75; font-style: italic;"># </span><span style="color: #586e75; font-style: italic;">save residuals to a variable</span>
-gpa.resid <span style="color: #2aa198;">&lt;-</span> residuals(gpa.fit)
-<span style="color: #586e75; font-style: italic;"># </span><span style="color: #586e75; font-style: italic;">save Predicted values to a variable</span>
-gpa.yhat <span style="color: #2aa198;">&lt;-</span> fitted.values(gpa.fit)
-
-<span style="color: #586e75; font-style: italic;"># </span><span style="color: #586e75; font-style: italic;">create png file, that plot will be saved to.</span>
-<span style="color: #586e75; font-style: italic;">#</span><span style="color: #586e75; font-style: italic;">png("resid.png")</span>
-<span style="color: #586e75; font-style: italic;"># </span><span style="color: #586e75; font-style: italic;">create a plot of residuals vs predicted values</span>
-plot(gpa.yhat,gpa.resid, ylab=<span style="color: #2aa198;">"Residuals"</span>, xlab=<span style="color: #2aa198;">"Predicted Values of Cum GPA"</span>, main=<span style="color: #2aa198;">"Plot of Residuals*Predicted Values"</span>)
-<span style="color: #586e75; font-style: italic;"># </span><span style="color: #586e75; font-style: italic;">create a line#</span>
+# create png file, that plot will be saved to.
+#png("resid.png")
+# create a plot of residuals vs predicted values
+plot(gpa.yhat,gpa.resid, ylab="Residuals", xlab="Predicted Values of Cum GPA", main="Plot of Residuals*Predicted Values")
+# create a line#
 abline(0,0)
-<span style="color: #586e75; font-style: italic;"># </span><span style="color: #586e75; font-style: italic;">write plot to file</span>
-<span style="color: #586e75; font-style: italic;">#</span><span style="color: #586e75; font-style: italic;">dev.off()</span>
-</pre>
+# write plot to file
+#dev.off()
+{% endhighlight %}
+
+
+
 
 
 <p>  
-<img src="/sites/default/files/resid.png"  alt="resid.png" />
+<img src="/assets/files/resid.png"  alt="resid.png" />
 </p>
 
 </div>
@@ -50,12 +53,15 @@ abline(0,0)
 
 
 
-<pre class="src src-R">anova(gpa.fit)
-</pre>
+{% highlight r %}
+anova(gpa.fit)
+{% endhighlight %}
 
 
 
-<pre class="example">Analysis of Variance Table
+
+{% highlight r %}
+Analysis of Variance Table
 
 Response: V4
            Df  Sum Sq Mean Sq F value    Pr(&gt;F)    
@@ -69,7 +75,8 @@ V8          1   0.278  0.2784  0.9187  0.338288
 Residuals 492 149.084  0.3030                      
 ---
 codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
-</pre>
+
+{% endhighlight %}
 
 
 </div>
@@ -83,13 +90,14 @@ codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 
 
 
-<pre class="src src-R">summary(gpa.fit)
-</pre>
+{% highlight r %}
+summary(gpa.fit)
+{% endhighlight %}
 
 
 
 
-<pre class="example">
+{% highlight r %}
 Call:
 lm(formula = V4 ~ V1 + V2 + V3 + V5 + V6 + V7 + V8, data = gpa.data)
 
@@ -113,6 +121,9 @@ codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 Residual standard error: 0.5505 on 492 degrees of freedom
 Multiple R-squared: 0.2112, Adjusted R-squared:   0.2 
 F-statistic: 18.82 on 7 and 492 DF,  p-value: &lt; 2.2e-16
-</pre>
+
+{% endhighlight %}
 
 
+</div>
+</div>
