Updated SAS-to-R post

--- a/_posts/2012-04-14-sas-to-r.html
+++ b/_posts/2012-04-14-sas-to-r.html
@@ -6,7 +6,7 @@ category: Data Analysis
 ---
 <h2 id="sec-1">How I did part of a SAS assignment in R</h2>
 <div class="outline-text-2" id="text-1">
-
+I was working on a SAS assignment for my Regression Analysis class.  
 
 <p>
 The residual plot in SAS was corrupted, luckily I was able to recreate
