added old images

--- a/_posts/2012-01-28-r-stuff.html
+++ b/_posts/2012-01-28-r-stuff.html
@@ -130,7 +130,7 @@ hist(faithful$waiting,breaks=25)
 </pre>
 
 <p>
-<img src="faithful.png"  alt="faithful.png" />
+<img src="assets/files/faithful.png"  alt="faithful.png" />
 </p>
 
 
@@ -224,7 +224,7 @@ Read 14 items
 </pre>
 
 <p>
-<img src="lightning.png"  alt="lightning.png" />
+<img src="assets/files/lightning.png"  alt="lightning.png" />
 </p>
 
 </div>
@@ -275,7 +275,7 @@ abline(my.reg)
 </pre>
 
 <p>
-<img src="regression.png"  alt="regression.png" />
+<img src="assets/files/regression.png"  alt="regression.png" />
 </p>
 
 </div>
