--- a/_posts/2012-01-28-git-log-to-the-rescue.html
+++ b/_posts/2012-01-28-git-log-to-the-rescue.html
@@ -19,10 +19,10 @@ category: Git
 <p>Git log with the &#8212;graph option prints a graph along the left edge to show branches of the repository.</p>
 <p><img src="https://lh4.googleusercontent.com/-y3F733L3w9w/Tu-KMcMnp7I/AAAAAAAACac/YtfG0oN5kaU/s640/git-log-stat-graph-pretty-short.jpg" title="The stars in the graph show which branch the commits are on." alt="The stars in the graph show which branch the commits are on." /></p>
 <p>The full command for the graph screenshot above is:</p>
-<pre class="bash"><code class="bash">git log --graph --stat --pretty=short</code></pre>
+{ highlight bash %}git log --graph --stat --pretty=short{% endhighlight %}
 <p>The repository used in the graph example is the git repository itself.  You can clone it here:</p>
-<pre class="bash"><code class="bash">git clone git://github.com/gitster/git.git</code></pre>
+{ highlight bash %}git clone git://github.com/gitster/git.git{% endhighlight %}
 
 <p>The repository used for the first two examples are from Drupal.  You can also clone drupal:</p>
-<pre class="bash"><code class="bash">git clone --branch 7.x http://git.drupal.org/project/drupal.git</code></pre>
+{ highlight bash %}git clone --branch 7.x http://git.drupal.org/project/drupal.git{% endhighlight %}
 			
