--- a/_posts/2012-01-28-r-emacs-orgmode.html
+++ b/_posts/2012-01-28-r-emacs-orgmode.html
@@ -23,9 +23,9 @@ categories: Emacs
 
 
 
-<pre>
+{% highlight bash %}
 &#35;+begin_src R :results graphics :file lightning.png :exports both
-</pre>
+{% endhighlight %}
 
 </div>
 
@@ -54,9 +54,10 @@ categories: Emacs
 <div class="outline-text-4" id="text-1-3">
 
 
-<pre>
+
+{% highlight bash %}
 &#35;+end_src
-</pre>
+{% endhighlight %}
 
 
 </div>
