--- a/_posts/2012-04-12-vim-emacs-regex.html
+++ b/_posts/2012-04-12-vim-emacs-regex.html
@@ -6,20 +6,20 @@ category: Vim
 ---
 So, I was trying to convert an orgmode file to html. There is an orgmode-export-as-html function, but it was choking on something, so I needed to do the conversion by hand. I tried many, many times to convert the file with emacs regular expressions, but was unsuccessful.  The difficulty was the orgmode headlines, which look like this:
 
-<pre>
+{ highlight bash %}
 *** Use the sort function
-</pre>
+{% endhighlight %}
 
 I wanted to simply transform this into 
-<pre>
+{ highlight bash %}
 &lt;h3&gt;Use the sort function&lt;/h3&gt;
-</pre>
+{% endhighlight %}
 
 <h2>Vim Regexp</h2>
 I was finally able to match the headline in vim with the following regular expression: 
-<pre><code src="vim">
+{ highlight bash %}
 \*\*\* \(\(w*\).*\)
-</code></pre>
+{% endhighlight %}
 
 <li> The literal asterisks had to be matched with \*.  
 <li> Next, to match to the end of the line I used: \(\(w*\).*\) 
@@ -28,18 +28,18 @@ I was finally able to match the headline in vim with the following regular expre
 
 <h2>Vim Substitution Expression</h2>
 
-<pre>
+{ highlight bash %}
 %s/\*\*\* \(\(w*\).*\)/&lt;h3&gt;\1&lt;\/h3&gt;/
-</pre>
+{% endhighlight %}
 <li> The % matches the entire file
 <li>The \1 matches the first matching group in the search string
 That is, \1 will match everything on the line after the 3 literal asterisks.
 
 <h2>Testing Matching String</h2>
 Its easy to test a regular expression in vim.  While in command mode (hit Esc if you are in input mode), type a / and then type your regular expression and then press "return", like so:
-<pre>
+{ highlight bash %}
 /\*\*\* [RETURN]
-</pre>
+{% endhighlight %}
 
 Your matches will be highlighted.  Click 'n' to jump to the next match.
 
