--- a/_posts/2010-05-08-how-to-build-nook-emulator.html
+++ b/_posts/2010-05-08-how-to-build-nook-emulator.html
@@ -5,4 +5,130 @@ title: How to Build a Nook emulator
 tags: android java eclipse android
 category: Android
 ---
-This post will walk you through building an Android Emulator for the Nook step-by-step in Eclipse and via the command-line.   These instructions are based on the <a href=http://nookdevs.com/Emulator>original instructions</a> located at the <a href=http://nookdevs.com/>nookdevs website</a>.<br /><br /><h3>Pre-requisites:  </h3><br />1. You need to have Eclipse running with the Android SDK.  More information on that can be <a href=http://developer.android.com/sdk/installing.html>found here</a>.<br />2. I'm assuming you are developing in a Linux-ish environment. I'm using the amazing <a href=http://ubuntu.com>Ubuntu Lucid Lynx</a>.<br />3. download and set up the following tools: <a href=http://code.google.com/p/smali/downloads/list>smali</a>, <a href=http://code.google.com/p/smali/downloads/list>baksmali</a>, <a href=http://code.google.com/p/unyaffs/downloads/list>unyaffs</a>, <a href=http://code.google.com/p/fatplus/downloads/list>yaffs2image</a>.<br /><br /><h3>How I Set Up the command-line tools:</h3><br /><b>smali and baksmali</b>. Description from the developer's site: <br />"smali/baksmali is an assembler/disassembler for the dex format used by dalvik, Android's Java VM implementation". <br />1.  Download them into your ~/bin/ directory.  <br />2. "chmod +x" the wrapper scripts (smali and baksmali) <br />3. rename the jar files: smali.jar and baksmali.jar.<br /><div id="code-div"><pre>cd ~/bin/<br />wget http://smali.googlecode.com/files/smali-1.2.2.jar<br />wget http://smali.googlecode.com/files/baksmali-1.2.2.jar<br />wget http://smali.googlecode.com/files/baksmali<br />wget http://smali.googlecode.com/files/smali<br />mv baksmali-1.2.2.jar baksmali.jar<br />mv smali-1.2.2.jar smali.jar<br />chmod +x smali<br />chmod +x baksmali<br /></pre></div><br /><br /><b>unyaffs</b> description: Unyaffs is a program to extract files from a yaffs file system image.    <br />1. download <a href=http://code.google.com/p/unyaffs/downloads/list>unyaffs</a> into your<br />~/bin; chmod +x unyaffs;   <br /><br /><b>mkyaffs2image</b>: <br />1. download <a href=http://code.google.com/p/fatplus/downloads/list>mkyaffs2image</a>.  I downloaded the yaffs2-binary.tar, untarred it and copied yaffs2/utils/mkyaffs2image to my ~/bin/ and chmod +x it.<br /><br /><h3>Okay we have the tools and our environment is ready!</h3><br /><br /><span style="font-weight:bold;">1.</span> I'm assuming you already have Eclipse set up and running with the Android Development Kit.  Nook runs on the cupcake 1.5 platform of Android.  So first we have to make sure that the Android 1.5 Platform is installed.  Assuming you downloaded the Android SDK into your home directory, run:<br /><pre>$ ~/android-sdk-linux_86/tools/android</pre><br />This will start the Android SDK and AVD Manager.  Click on Installed Packages and look for SDK Platform 1.5.  If you do not see it, click on Available Packages and download and install it.<br /><br /><span style="font-weight:bold;">2. Grab the original 1.0.0 image from</span> bn.com (mirrored here: <a href=http://www.multiupload.com/YWHOXQKYVS>multiupload</a>).<br /><br /><span style="font-weight:bold;">3.Run</span> <pre>$ dd if=signed_bravo_update.1.0.0.dat of=signed-bravo-update.1.0.0.tar.gz bs=1 skip=152</pre><br />This takes a while.  You now have signed-bravo-update.1.0.0.tar.gz<br /><br /><span style="font-weight:bold;">4.Uncompress the new file: signed-bravo-update.1.0.0.tar.gz   </span><br /><div id="code-div"><pre><code>$ tar xzvf signed-bravo-update.1.0.0.tar.gz</code></pre></div><br />Now you have the uncompressed folder Firmware_Update, <br /><div id="code-div"><pre><code>$ cd Firmware_Update</code></pre></div><br /><br /><span style="font-weight:bold;">5. Rename bravo_update.dat to bravo_update.tar.gz and extract it. </span><br /><div id="code-div"><pre><code><br />$ mv bravo_update.dat bravo_update.tar.gz<br />$ tar xvzf bravo_update.tar.gz<br /></code></pre></div><br />This uncompresses another Firmware_Update folder, cd in to it.<br /><div id="code-div"><pre><code>$ cd Firmware_Update</code></pre></div><br />if you pwd, you'll be in Firmware_Update/Firmware_Update<br /><br /><span style="font-weight:bold;">6. Extract root.tgz</span><br /><div id="code-div"><pre><code><br />$ tar xvzf root.tgz<br /></code></pre></div><br />this uncompresses a lot of stuff. All of the Android system image actually.  Later we will re-compress the system folder to create the system.img<br /><br /><span style="font-weight:bold;">7. Extract system/framework/services.jar </span>with your favorite unzip utility. <br />I did this from the GUI, right click on file and select "Extract here". <br />$ cd services<br /><br /><span style="font-weight:bold;">8. disassemble the file classes.dex with baksmai</span><br /><div id="code-div"><pre><code>$ baksmali classes.dex</code></pre></div>This create out/<br /><br /><span style="font-weight:bold;">9. vi out/com/android/server/ServerThread.smali</span><br />delete the line <br /><div id="code-div"><pre><code>if-lt v0, v1, :cond_483</code></pre></div><br />(for the vi-newbies, you can search in vi by typing a forward slash and typing in a phrase like "if\-lt", then type dd, to delete the line, and ":wq" to write the file and quit)<br /><br /><span style="font-weight:bold;">10. reassemble the file with <br /></span><br /><div id="code-div"><pre><code>$ smali out</code></pre></div><br /><br /><span style="font-weight:bold;">11. Replace the old classes.dex with this re-assembled file:</span><br /><div id="code-div"><pre><code>mv out.dex classes.dex</code></pre></div><br /><br /><span style="font-weight:bold;">12. delete the old out/ directory and re-jar the contents of the services folder</span>, but the not the services folder itself.<br />(I moved the META-INF folder and classes.dex out of the services directory and into the parent framework directory. Removed the empty services directory. Right clicked the classes.dex and selected "compress", and selected as name "services" and type as "jar" file, then I dragged the META-INF file onto the new services.jar. Yes, I know there is a better way, but I'm kind of new to jar files...)<br /><br /><br /><h4>Now we are going to build an android AVD, so we can extract a single file to use back in this system.</h4><br /><span style="font-weight:bold;">13. if your android SDK tools are in your path Run</span>,<br /><pre>android</pre><br />else find the android command and run it, or run it from eclipse.<br /><br />This starts the Android SDK and AVD Manager.  To create a new AVD, click New...<br />Name: nook<br />Target: Android 1.5<br />Size: <leave empty><br />Skin: click Resolution, and fill in 488 x 944<br />click "Create AVD".<br />Then click "Details" to see where it was created.  It should be at ~/.android/avd/nook.avd<br /><br /><span style="font-weight:bold;">14. unyaffs the system.img and grab a file</span><br /><div id="code-div"><pre><code><br />cd ~/nook_dev/<br />mkdir sys_img<br />cd sys_img<br />cp ~/android-sdk-linux_86/platforms/android-3/images/system.img .<br />unyaffs system.img<br />cp lib/libaudioflinger.so ~/nook_dev/Firmware_Update/Firmware_Update/system/lib/libaudioflinger.so<br /></code></pre></div><br /><br /><span style="font-weight:bold;">15. re-create the system.img with the new audio file.</span><br /><div id="code-div"><pre><code><br />cd ~/nook_dev/Firmware_Update/Firmware_Update/<br />mkyaffs2image ./system/ system.img<br /></code></pre></div>this creates a new system.img<br /><br /><span style="font-weight:bold;">16. Sketchy step where you overwrite the good Android 1.5 platform system.img in your Android SDK with this new one.</span><br /><div id="code-div"><pre><code><br />mv ~/android-sdk-linux_86/platforms/android-3/images/system.img ~/android-sdk-linux_86/platforms/android-3/images/good.img <br />cp ~/nook_dev/Firmware_Update/Firmware_Update/system.img ~/android-sdk-linux_86/platforms/android-3/images/system.img <br /></code></pre></div><br /><span style="font-weight:bold;">Remember to change this back later if you want to do non-nook related Android Development.</span><br /><br /><span style="font-weight:bold;">17. run the emulator!</span><br /><div id="code-div"><pre><code><br />emulator @nook -shell -show-kernel -verbose<br /></code></pre></div><br /><br /><a href="http://www.flickr.com/photos/redbike/4604815190/" title="Nook Emulator screenshot by denverfiddler, on Flickr"><img src="http://farm5.static.flickr.com/4049/4604815190_698482e4b6.jpg" width="500" height="380" alt="Nook Emulator screenshot" /></a><div class="blogger-post-footer"><img width='1' height='1' src='https://blogger.googleusercontent.com/tracker/7035860407900002000-4470985898072103988?l=denverdroid.blogspot.com' alt='' /></div>
+This post will walk you through building an Android Emulator for the Nook step-by-step in Eclipse and via the command-line.   These instructions are based on the <a href=http://nookdevs.com/Emulator>original instructions</a> located at the <a href=http://nookdevs.com/>nookdevs website</a>.
+
+<h3>Pre-requisites:  </h3>
+1. You need to have Eclipse running with the Android SDK.  More information on that can be <a href=http://developer.android.com/sdk/installing.html>found here</a>.
+2. I'm assuming you are developing in a Linux-ish environment. I'm using the amazing <a href=http://ubuntu.com>Ubuntu Lucid Lynx</a>.
+3. download and set up the following tools: <a href=http://code.google.com/p/smali/downloads/list>smali</a>, <a href=http://code.google.com/p/smali/downloads/list>baksmali</a>, <a href=http://code.google.com/p/unyaffs/downloads/list>unyaffs</a>, <a href=http://code.google.com/p/fatplus/downloads/list>yaffs2image</a>.
+
+<h3>How I Set Up the command-line tools:</h3>
+<b>smali and baksmali</b>. Description from the developer's site: 
+"smali/baksmali is an assembler/disassembler for the dex format used by dalvik, Android's Java VM implementation". 
+1.  Download them into your ~/bin/ directory.  
+2. "chmod +x" the wrapper scripts (smali and baksmali) 
+3. rename the jar files: smali.jar and baksmali.jar.
+<div id="code-div">{ highlight bash %}cd ~/bin/
+wget http://smali.googlecode.com/files/smali-1.2.2.jar
+wget http://smali.googlecode.com/files/baksmali-1.2.2.jar
+wget http://smali.googlecode.com/files/baksmali
+wget http://smali.googlecode.com/files/smali
+mv baksmali-1.2.2.jar baksmali.jar
+mv smali-1.2.2.jar smali.jar
+chmod +x smali
+chmod +x baksmali
+{% endhighlight %}</div>
+
+<b>unyaffs</b> description: Unyaffs is a program to extract files from a yaffs file system image.    
+1. download <a href=http://code.google.com/p/unyaffs/downloads/list>unyaffs</a> into your
+~/bin; chmod +x unyaffs;   
+
+<b>mkyaffs2image</b>: 
+1. download <a href=http://code.google.com/p/fatplus/downloads/list>mkyaffs2image</a>.  I downloaded the yaffs2-binary.tar, untarred it and copied yaffs2/utils/mkyaffs2image to my ~/bin/ and chmod +x it.
+
+<h3>Okay we have the tools and our environment is ready!</h3>
+
+<span style="font-weight:bold;">1.</span> I'm assuming you already have Eclipse set up and running with the Android Development Kit.  Nook runs on the cupcake 1.5 platform of Android.  So first we have to make sure that the Android 1.5 Platform is installed.  Assuming you downloaded the Android SDK into your home directory, run:
+{ highlight bash %}$ ~/android-sdk-linux_86/tools/android{% endhighlight %}
+This will start the Android SDK and AVD Manager.  Click on Installed Packages and look for SDK Platform 1.5.  If you do not see it, click on Available Packages and download and install it.
+
+<span style="font-weight:bold;">2. Grab the original 1.0.0 image from</span> bn.com (mirrored here: <a href=http://www.multiupload.com/YWHOXQKYVS>multiupload</a>).
+
+<span style="font-weight:bold;">3.Run</span> { highlight bash %}$ dd if=signed_bravo_update.1.0.0.dat of=signed-bravo-update.1.0.0.tar.gz bs=1 skip=152{% endhighlight %}
+This takes a while.  You now have signed-bravo-update.1.0.0.tar.gz
+
+<span style="font-weight:bold;">4.Uncompress the new file: signed-bravo-update.1.0.0.tar.gz   </span>
+<div id="code-div">{ highlight bash %}$ tar xzvf signed-bravo-update.1.0.0.tar.gz{% endhighlight %}</div>
+Now you have the uncompressed folder Firmware_Update, 
+<div id="code-div">{ highlight bash %}$ cd Firmware_Update{% endhighlight %}</div>
+
+<span style="font-weight:bold;">5. Rename bravo_update.dat to bravo_update.tar.gz and extract it. </span>
+<div id="code-div">{ highlight bash %}
+$ mv bravo_update.dat bravo_update.tar.gz
+$ tar xvzf bravo_update.tar.gz
+{% endhighlight %}</div>
+This uncompresses another Firmware_Update folder, cd in to it.
+<div id="code-div">{ highlight bash %}$ cd Firmware_Update{% endhighlight %}</div>
+if you pwd, you'll be in Firmware_Update/Firmware_Update
+
+<span style="font-weight:bold;">6. Extract root.tgz</span>
+<div id="code-div">{ highlight bash %}
+$ tar xvzf root.tgz
+{% endhighlight %}</div>
+this uncompresses a lot of stuff. All of the Android system image actually.  Later we will re-compress the system folder to create the system.img
+
+<span style="font-weight:bold;">7. Extract system/framework/services.jar </span>with your favorite unzip utility. 
+I did this from the GUI, right click on file and select "Extract here". 
+$ cd services
+
+<span style="font-weight:bold;">8. disassemble the file classes.dex with baksmai</span>
+<div id="code-div">{ highlight bash %}$ baksmali classes.dex{% endhighlight %}</div>This create out/
+
+<span style="font-weight:bold;">9. vi out/com/android/server/ServerThread.smali</span>
+delete the line 
+<div id="code-div">{ highlight bash %}if-lt v0, v1, :cond_483{% endhighlight %}</div>
+(for the vi-newbies, you can search in vi by typing a forward slash and typing in a phrase like "if\-lt", then type dd, to delete the line, and ":wq" to write the file and quit)
+
+<span style="font-weight:bold;">10. reassemble the file with 
+</span>
+<div id="code-div">{ highlight bash %}$ smali out{% endhighlight %}</div>
+
+<span style="font-weight:bold;">11. Replace the old classes.dex with this re-assembled file:</span>
+<div id="code-div">{ highlight bash %}mv out.dex classes.dex{% endhighlight %}</div>
+
+<span style="font-weight:bold;">12. delete the old out/ directory and re-jar the contents of the services folder</span>, but the not the services folder itself.
+(I moved the META-INF folder and classes.dex out of the services directory and into the parent framework directory. Removed the empty services directory. Right clicked the classes.dex and selected "compress", and selected as name "services" and type as "jar" file, then I dragged the META-INF file onto the new services.jar. Yes, I know there is a better way, but I'm kind of new to jar files...)
+
+
+<h4>Now we are going to build an android AVD, so we can extract a single file to use back in this system.</h4>
+<span style="font-weight:bold;">13. if your android SDK tools are in your path Run</span>,
+{ highlight bash %}android{% endhighlight %}
+else find the android command and run it, or run it from eclipse.
+
+This starts the Android SDK and AVD Manager.  To create a new AVD, click New...
+Name: nook
+Target: Android 1.5
+Size: <leave empty>
+Skin: click Resolution, and fill in 488 x 944
+click "Create AVD".
+Then click "Details" to see where it was created.  It should be at ~/.android/avd/nook.avd
+
+<span style="font-weight:bold;">14. unyaffs the system.img and grab a file</span>
+<div id="code-div">{ highlight bash %}
+cd ~/nook_dev/
+mkdir sys_img
+cd sys_img
+cp ~/android-sdk-linux_86/platforms/android-3/images/system.img .
+unyaffs system.img
+cp lib/libaudioflinger.so ~/nook_dev/Firmware_Update/Firmware_Update/system/lib/libaudioflinger.so
+{% endhighlight %}</div>
+
+<span style="font-weight:bold;">15. re-create the system.img with the new audio file.</span>
+<div id="code-div">{ highlight bash %}
+cd ~/nook_dev/Firmware_Update/Firmware_Update/
+mkyaffs2image ./system/ system.img
+{% endhighlight %}</div>this creates a new system.img
+
+<span style="font-weight:bold;">16. Sketchy step where you overwrite the good Android 1.5 platform system.img in your Android SDK with this new one.</span>
+<div id="code-div">{ highlight bash %}
+mv ~/android-sdk-linux_86/platforms/android-3/images/system.img ~/android-sdk-linux_86/platforms/android-3/images/good.img 
+cp ~/nook_dev/Firmware_Update/Firmware_Update/system.img ~/android-sdk-linux_86/platforms/android-3/images/system.img 
+{% endhighlight %}</div>
+<span style="font-weight:bold;">Remember to change this back later if you want to do non-nook related Android Development.</span>
+
+<span style="font-weight:bold;">17. run the emulator!</span>
+<div id="code-div">{ highlight bash %}
+emulator @nook -shell -show-kernel -verbose
+{% endhighlight %}</div>
+
+<a href="http://www.flickr.com/photos/redbike/4604815190/" title="Nook Emulator screenshot by denverfiddler, on Flickr"><img src="http://farm5.static.flickr.com/4049/4604815190_698482e4b6.jpg" width="500" height="380" alt="Nook Emulator screenshot" /></a><div class="blogger-post-footer"><img width='1' height='1' src='https://blogger.googleusercontent.com/tracker/7035860407900002000-4470985898072103988?l=denverdroid.blogspot.com' alt='' /></div>
