--- a/_posts/2011-11-28-drush-commands.html
+++ b/_posts/2011-11-28-drush-commands.html
@@ -7,7 +7,7 @@ category: Drupal
 
 <h3 id="sec-2">Basic Drush </h3>
 
-<pre class="example">// Download a module or theme
+{ highlight bash %}// Download a module or theme
 drush dl cck
 
 // Enable module or theme
@@ -24,7 +24,7 @@ drush sa
 
 // Get status on particular site, via site-alias
 drush @math status
-</pre>
+{% endhighlight %}
 
 
 
@@ -35,9 +35,9 @@ drush @math status
 
 <h4 id="sec-3.1.1">Sync Dev Server with Staging Server </h4>
 
-<pre class="example">// drush core-rsync &lt;source&gt; &lt;destination&gt;
+{ highlight bash %}// drush core-rsync &lt;source&gt; &lt;destination&gt;
 drush core-rsync @dev @stage
-</pre>
+{% endhighlight %}
 
 
 
@@ -51,8 +51,8 @@ drush core-rsync @dev @stage
 <h4 id="sec-3.1.2">Download drush<sub>extras</sub> </h4>
 
 
-<pre class="example">drush dl drush_extras
-</pre>
+{ highlight bash %}drush dl drush_extras
+{% endhighlight %}
 
 
 <h4 id="sec-3.1.3">Drush pushkey </h4>
@@ -63,9 +63,9 @@ commands will use this public/private key for authentication.
 </p>
 
 
-<pre class="example">// okay substitute your username for "boris" and your server for "badinoff.com"
+{ highlight bash %}// okay substitute your username for "boris" and your server for "badinoff.com"
 drush pushkey boris@badinoff.com 
-</pre>
+{% endhighlight %}
 
 <h2 id="sec-4">Drush Git Backup </h2>
 
@@ -80,30 +80,30 @@ drush pushkey boris@badinoff.com
 
 
 
-<pre class="example">cd &lt;drush directory&gt;/commands/
+{ highlight bash %}cd &lt;drush directory&gt;/commands/
 git clone https://github.com/scor/dgb.git
-</pre>
+{% endhighlight %}
 
 
 
 <h3 id="sec-4.2">Setup DGB for a site </h3>
-<pre class="example"># from DRUPAL_ROOT 
+{ highlight bash %}# from DRUPAL_ROOT 
 # cd up one directory
 cd ..
 # create directory for backed up database
 mkdir databases
 # initialize a git repository
 git init
-</pre>
+{% endhighlight %}
 
 <h3 id="sec-4.3">Back up Site </h3>
 
 
 
 
-<pre class="example">cd &lt;DRUPAL_ROOT&gt;
+{ highlight bash %}cd &lt;DRUPAL_ROOT&gt;
 drush dgb-backup
-</pre>
+{% endhighlight %}
 
 
 
@@ -120,18 +120,18 @@ drush dgb-backup
 
 
 
-<pre class="example"># from DRUPAL_ROOT cd into the DGB instance directory
+{ highlight bash %}# from DRUPAL_ROOT cd into the DGB instance directory
 cd ..
 # see list of git commits
 git log
 # see what files have changed since last call to drush dgb-backup
 git status
-</pre>
+{% endhighlight %}
 
 
 <h3 id="sec-4.5">Clone the Site for development </h3>
 
-<pre class="example"># from DRUPAL_ROOT
+{ highlight bash %}# from DRUPAL_ROOT
 cd ../..
 # create a dev directory parallel to other site
 mkdir dev
@@ -149,14 +149,14 @@ mysql -u &lt;dbuser&gt; -p &lt;dbpasswd&gt; &lt;devdbname&gt; &lt; &lt;path-to-d
 vim sites/default/settings.php
 # finally check that there is an .htaccess file in your new dev
 # &lt;DRUPAL_ROOT&gt; if not, copy it over from the cloned siteF
-</pre>
+{% endhighlight %}
 
 
 
 
 <h3 id="sec-4.6">Another Way to Copy @live to @dev </h3>
 
-<pre class="example">
+{ highlight bash %}
 # Core-rsync copies all of the files from one site instance to another.
 # The first time you sync you can use --include-conf option to copy settings.php.
 drush core-rsync @live @dev --include-conf
@@ -169,7 +169,7 @@ drush core-rsync @live @dev
 # Sync databases.
 drush sql-sync @live @dev
 
-</pre>
+{% endhighlight %}
 
 
 
