--- a/_posts/2012-01-28-r-stuff.html
+++ b/_posts/2012-01-28-r-stuff.html
@@ -21,9 +21,9 @@ category: Data Analysis
 <div class="outline-text-3" id="text-1-1">
 
 
-<pre class"src src-r">
+{% highlight r %}
 install.packages("XML", dependencies = TRUE)
-</pre>
+{% endhighlight %}
 
 </div>
 
@@ -34,9 +34,9 @@ install.packages("XML", dependencies = TRUE)
 <div class="outline-text-3" id="text-1-2">
 
 
-<pre class"src src-r">
+{% highlight r %}
 library(XML)
-</pre>
+{% endhighlight %}
 
 </div>
 
@@ -47,14 +47,14 @@ library(XML)
 <div class="outline-text-3" id="text-1-3">
 
 
-<pre class"src src-r">
+{% highlight r %}
 library(XML)
 u = "http://en.wikipedia.org/wiki/World_population"
 # function from XML library, downloads and parses URL for data in HTMLtables
 tables = readHtmlTable(u)
 names(tables)
 tables[[2]]
-</pre>
+{% endhighlight %}
 
 </div>
 </div>
@@ -73,7 +73,7 @@ tables[[2]]
 <div class="outline-text-3" id="text-2-1">
 
 
-<pre class="src src-R">
+{% highlight r %}
 # x is a vector with values 1 2 3 4 5
 x &lt;- 1:5
 
@@ -84,11 +84,12 @@ square &lt;- function(x) {
   
 # call fuction with vector x
 square(x)
-</pre>
+{% endhighlight %}
 
-<pre>
+
+{% highlight r %}
 : [1]  1  4  9 16 25
-</pre>
+{% endhighlight %}
 
 </div>
 
@@ -123,11 +124,11 @@ square(x)
 <div class="outline-text-3" id="text-2-3">
 
 
-<pre class="src src-R">
+{% highlight r %}
 library(datasets)
 data(faithful)
 hist(faithful$waiting,breaks=25)
-</pre>
+{% endhighlight %}
 
 <p>
 <img src="/assets/files/faithful.png"  alt="faithful.png" />
@@ -143,14 +144,14 @@ hist(faithful$waiting,breaks=25)
 <div class="outline-text-3" id="text-2-4">
 
 
-<pre class="src src-R">
+{% highlight r %}
 dat &lt;- read.table("thedata.txt", sep=":")
 # space delimited, also first line is a header
 dat2 &lt;- read.table("thedata.txt", header=TRUE)
 # csv
 dat &lt;- read.csv("thedata.csv")
 print(dat)
-</pre>
+{% endhighlight %}
 
 </div>
 
@@ -169,12 +170,12 @@ print(dat)
 </ul>
 
 
-<pre class="src src-R">
+{% highlight r %}
 > nums &lt;- scan()
 1: 75  48  61  48 150  49  57  39  27  51  46  50  62  51
 15: 
 Read 14 items
-</pre>
+{% endhighlight %}
 
 
 </div>
@@ -186,7 +187,7 @@ Read 14 items
 <div class="outline-text-3" id="text-2-6">
 
 
-<pre class="src src-R">
+{% highlight r %}
   
   nums &lt;- scan(textConnection("75 48 61 48 150 49 57 39 27 51 46 50 62 51 50 58 38 34 59 44 24 39 40 33 49 33 34 32 35 30 23 39 36 25 20 32 43 52 42 44 46 51 47 51 44 33 38"), sep=" ")
   median(nums)
@@ -195,15 +196,15 @@ Read 14 items
   mean(deaths)
   median(deaths)
   sd(deaths)
-</pre>
+{% endhighlight %}
 
-<pre>
+{% highlight r %}
 : [1] 44
 : [1] 44.93617
 : [1] 42.65217
 : [1] 43.5
 : [1] 11.48761
-</pre>
+{% endhighlight %}
 
 
 </div>
@@ -215,13 +216,13 @@ Read 14 items
 <div class="outline-text-3" id="text-2-7">
 
 
-<pre class="src src-R">
+{% highlight r %}
   # Data pasted from another document can be placed in a vector
   #   via the following composition of functions
   # textConnection can also be used to read data from stdin
   nums &lt;- scan(textConnection("75 48 61 48 150 49 57 39 27 51 46 50 62 51 50 58 38 34 59 44 24 39 40 33 49 33 34 32 35 30 23 39 36 25 20 32 43 52 42 44 46 51 47 51 44 33 38"), sep=" ")
   hist(nums, main="US Lightning Death's 1959-2005")
-</pre>
+{% endhighlight %}
 
 <p>
 <img src="/assets/files/lightning.png"  alt="lightning.png" />
@@ -236,7 +237,7 @@ Read 14 items
 <div class="outline-text-3" id="text-2-8">
 
 
-<pre class="src src-R">
+{% highlight r %}
 library(datasets)
 data(airmiles)
 median(airmiles)
@@ -248,15 +249,15 @@ mean(airmiles,trim=10)
 mean(airmiles,trim=0.4)
 #same as median
 mean(airmiles,trim=0.5)
-</pre>
+{% endhighlight %}
 
-<pre>
+{% highlight r %}
 : [1] 6431
 : [1] 10527.83
 : [1] 6431
 : [1] 7226.667
 : [1] 6431
-</pre>
+{% endhighlight %}
 
 </div>
 
@@ -267,12 +268,12 @@ mean(airmiles,trim=0.5)
 <div class="outline-text-3" id="text-2-9">
 
 
-<pre class="src src-R">
+{% highlight r %}
 library(Devore7)
 plot(ex12.59)
 my.reg &lt;- lm (ex12.59$y ~ ex12.59$x)
 abline(my.reg)
-</pre>
+{% endhighlight %}
 
 <p>
 <img src="/assets/files/regression.png"  alt="regression.png" />
@@ -287,11 +288,11 @@ abline(my.reg)
 <div class="outline-text-3" id="text-2-10">
 
 
-<pre>
+{% highlight r %}
 > par(mfrow=c(2,2))
 > boxplot(my.p)
 > boxplot(my.h)
-</pre>
+{% endhighlight %}
 
 
 
@@ -332,14 +333,14 @@ on each value and returns the vector of return values.
 
 <p>This function returns the cumulative distribution function of
 P(x&lt;4) of X~poisson(5).   
-<pre class="src R-src">
+{% highlight r %}
 Reduce("+",Map(function(u){exp(-5)*5^u/factorial(u)},0:3))
-</pre>
+{% endhighlight %}
 
 
-<pre>
+{% highlight r %}
 : [1] 0.2650259
-</pre>
+{% endhighlight %}
 
 
 
@@ -362,10 +363,11 @@ Reduce("+",Map(function(u){exp(-5)*5^u/factorial(u)},0:3))
 
 
 
-<pre class="example">### my.100,m.125,m.150,m.175 are vectors we are analysing
+{% highlight r %}
+### my.100,m.125,m.150,m.175 are vectors we are analysing
 length(m.100)*sum((m.100-mean(m.100))^2)+length(m.125)*sum((m.125-mean(m.125))^2) + length(m.150)*sum((m.150-mean(m.150))^2) + length(m.175)*sum((m.175-mean(m.175))^2)
 
-</pre>
+{% endhighlight %}
 
 
 </div>
@@ -379,11 +381,12 @@ length(m.100)*sum((m.100-mean(m.100))^2)+length(m.125)*sum((m.125-mean(m.125))^2
 
 
 
-<pre class="example">### b.1,b.2, b.3, b.4 are rows of values
+{% highlight r %}
+### b.1,b.2, b.3, b.4 are rows of values
 ### \Sigma (X_{ij} - X_{bar_dot})^2
 m.SSE &lt;- sum((b.1-mean(b.1))^2) + sum((b.2-mean(b.2))^2) + sum((b.3-mean(b.3))^2) + sum((b.4-mean(b.4))^2)
 
-</pre>
+{% endhighlight %}
 
 </div>
 </div>
