--- a/_posts/2012-04-02-sas-notes.html
+++ b/_posts/2012-04-02-sas-notes.html
@@ -8,104 +8,104 @@ category: Data Analysis
 <h2>The Data Step</h2>
 <h3>Subsetting IF</h3>
 In a Data Step you can exclude some observations from the dataset with an if statement.
-<pre><class="example">
+{ highlight s %}
 data tornados_1980s;
   infile FileName;
   input year city damages;
   * this limits input data to 1980s data;
   if 1980 <= year <= 1989;
 run;
-</class></pre>
+{ endhighlight %}
 
 <li> IF .. IN statement
-<pre><class="example">
+{ highlight s %}
 if year in (1980, 1981, 1982);
-</class></pre>
+{ endhighlight %}
 
 <li> AND, OR 
-<pre><class="example">
+{ highlight s %}
 if year = '1980' and city = 'Baltimore';
-</class></pre> 
+{ endhighlight %} 
 
 
 <h3>infile 'filename'</h3>
 In the data step, import data from a file with the infile command.
-<pre><class="example">
+{ highlight s %}
 data tornados;
   infile 'tornados.dat';
   input year city cost;
 run;
-</class></pre>
+{ endhighlight %}
 
 <h3>Set </h3>
 <li> Use the set command to create a new data set from an already created
   set.
 The following creates a dataset of 1980s tornado data from the larger
 set of tornado data.
-<pre><class="example">
+{ highlight s %}
 data tornados_1980s;
   set tornados;
   if 1980 <= year <= 1989;
 run;
-</class></pre>
+{ endhighlight %}
 
 <h2>The PROC Step</h2>
 <h3>PROC SORT</h3>
 <li> The sort procedure, sorts data. You can sort by multiple fields.
 <li> Also you can print by a field.
-<pre><class="example">
+{ highlight s %}
 proc sort data=tornados;
   by year city;
 proc print data=tornados;
   by year;
 run;
-</class></pre>
+{ endhighlight %}
 
 <h3>PROC Univariate</h3>
 PROC Univariate generates descriptive statistics
-<pre><class="example">
+{ highlight s %}
 proc univariate data=tornados;
   histogram year;
 run;
-</class></pre>
+{ endhighlight %}
 
 <h3>PROC means</h3>
 Use proc means when you are only interested in basic descriptive statistics.
 <h3>PROC freq</h3>
 <li> generates tables for data in categories.
 <h3>PROC gplot</h3>
-<pre><class="example">
+{ highlight s %}
 proc gplot data=tornados;
   plot year*cost;
   title 'Year by Cost tornados';
 run;
-</class></pre>
+{ endhighlight %}
 
 <h3>PROC corr</h3>
 <h4>compute the correlation</h4>
-<pre><class="example">
+{ highlight s %}
 proc corr data=grades;
   var exam1 exam2 hwscore;
 run;
-</class></pre>
+{ endhighlight %}
 
 <h3>PROC reg</h3>
 <li> p: prints obs, predicted, residuals
 <li> r: same as p, plus more
 <li> clm: 95% conf interval for mean of each obs
 <li> cli: 95% prediction intervals.
-<pre><class="example">
+{ highlight s %}
 proc reg data=grades;
   model final=exam1 hwscore / p r cli clm;
   plot final*hwscore;
 run;
-</class></pre>
+{ endhighlight %}
 
 <h2>Multiple Regression Analysis</h2>
 <h3>Variable Selection</h3>
 SAS has several methods for selecting variables
 
-<pre><class="example">
+{ highlight s %}
 proc reg data=cdi;
   model y = x1-x8 /selection=rsquare best=1;
   model y = x1-x8 /selection=adjrsq best=5;
@@ -114,7 +114,7 @@ proc reg data=cdi;
   model y = x1-x8 /selection=stepwise slentry=0.10 slstay=0.10;
   model y = x1-x8 /selection=backward slstay=0.10;
 run;
-</class></pre>
+{ endhighlight %}
 
 additional pages to try:
 <a href=http://www.ats.ucla.edu/stat/sas/modules/graph.htm>more sas</a>
