--- a/_posts/2011-05-19-zombies-orgmode.html
+++ b/_posts/2011-05-19-zombies-orgmode.html
@@ -1,5 +1,5 @@
 layout: post
-{ highlight dot %}
+{% highlight dot %}
 #+begin_src dot :file digraph2.png :cmdline -Kdot -Tpng  
 digraph D {
   size="8,6"
