--- a/_posts/2011-11-23-apache-notes.html
+++ b/_posts/2011-11-23-apache-notes.html
@@ -15,7 +15,7 @@ category: Web Development
 
 
 
-{ highlight bash %}sudo apache2ctl graceful
+{% highlight bash %}sudo apache2ctl graceful
 {% endhighlight %}
 
 
@@ -30,7 +30,7 @@ category: Web Development
 
 
 
-{ highlight bash %}sudo tail -f /var/log/apache2/error.log
+{% highlight bash %}sudo tail -f /var/log/apache2/error.log
 {% endhighlight %}
 
 
@@ -52,7 +52,7 @@ category: Web Development
 
 
 
-{ highlight bash %}sudo vi /etc/apache2/sites-available/default
+{% highlight bash %}sudo vi /etc/apache2/sites-available/default
 {% endhighlight %}
 
 
@@ -67,7 +67,7 @@ category: Web Development
 
 
 
-{ highlight bash %}&lt;VirtualHost *:80&gt;  
+{% highlight bash %}&lt;VirtualHost *:80&gt;  
   ServerName majorursa.net
   ServerAlias www.majorursa.net
   DocumentRoot /var/www/majorursalia/
@@ -86,7 +86,7 @@ category: Web Development
 
 
 
-{ highlight bash %}&lt;VirtualHost *:80&gt;  
+{% highlight bash %}&lt;VirtualHost *:80&gt;  
   ServerName majorursa.net
   ServerAlias www.majorursa.net
   DocumentRoot /var/www/majorursalia/drupal-6.22
