--- a/_posts/2012-02-23-vim-notes.html
+++ b/_posts/2012-02-23-vim-notes.html
@@ -77,7 +77,7 @@ category: Vim
 
 
 
-{ highlight bash %}attrcolor b ".I"
+{% highlight bash %}attrcolor b ".I"
 termcapinfo xterm 'Co#256:AB=\E[48;5;%dm:AF=\E[38;5;%dm'
 defbce "on"
 term screen-256color-bce
@@ -95,7 +95,7 @@ term screen-256color-bce
 
 
 
-{ highlight bash %}" Colors!!
+{% highlight bash %}" Colors!!
 set t_Co=256
 
 " color theme
