--- a/_posts/2010-05-08-how-to-build-nook-emulator.html
+++ b/_posts/2010-05-08-how-to-build-nook-emulator.html
@@ -18,7 +18,7 @@ This post will walk you through building an Android Emulator for the Nook step-b
 1.  Download them into your ~/bin/ directory.  
 2. "chmod +x" the wrapper scripts (smali and baksmali) 
 3. rename the jar files: smali.jar and baksmali.jar.
-<div id="code-div">{ highlight bash %}cd ~/bin/
+<div id="code-div">{% highlight bash %}cd ~/bin/
 wget http://smali.googlecode.com/files/smali-1.2.2.jar
 wget http://smali.googlecode.com/files/baksmali-1.2.2.jar
 wget http://smali.googlecode.com/files/baksmali
@@ -39,30 +39,30 @@ chmod +x baksmali
 <h3>Okay we have the tools and our environment is ready!</h3>
 
 <span style="font-weight:bold;">1.</span> I'm assuming you already have Eclipse set up and running with the Android Development Kit.  Nook runs on the cupcake 1.5 platform of Android.  So first we have to make sure that the Android 1.5 Platform is installed.  Assuming you downloaded the Android SDK into your home directory, run:
-{ highlight bash %}$ ~/android-sdk-linux_86/tools/android{% endhighlight %}
+{% highlight bash %}$ ~/android-sdk-linux_86/tools/android{% endhighlight %}
 This will start the Android SDK and AVD Manager.  Click on Installed Packages and look for SDK Platform 1.5.  If you do not see it, click on Available Packages and download and install it.
 
 <span style="font-weight:bold;">2. Grab the original 1.0.0 image from</span> bn.com (mirrored here: <a href=http://www.multiupload.com/YWHOXQKYVS>multiupload</a>).
 
-<span style="font-weight:bold;">3.Run</span> { highlight bash %}$ dd if=signed_bravo_update.1.0.0.dat of=signed-bravo-update.1.0.0.tar.gz bs=1 skip=152{% endhighlight %}
+<span style="font-weight:bold;">3.Run</span> {% highlight bash %}$ dd if=signed_bravo_update.1.0.0.dat of=signed-bravo-update.1.0.0.tar.gz bs=1 skip=152{% endhighlight %}
 This takes a while.  You now have signed-bravo-update.1.0.0.tar.gz
 
 <span style="font-weight:bold;">4.Uncompress the new file: signed-bravo-update.1.0.0.tar.gz   </span>
-<div id="code-div">{ highlight bash %}$ tar xzvf signed-bravo-update.1.0.0.tar.gz{% endhighlight %}</div>
+<div id="code-div">{% highlight bash %}$ tar xzvf signed-bravo-update.1.0.0.tar.gz{% endhighlight %}</div>
 Now you have the uncompressed folder Firmware_Update, 
-<div id="code-div">{ highlight bash %}$ cd Firmware_Update{% endhighlight %}</div>
+<div id="code-div">{% highlight bash %}$ cd Firmware_Update{% endhighlight %}</div>
 
 <span style="font-weight:bold;">5. Rename bravo_update.dat to bravo_update.tar.gz and extract it. </span>
-<div id="code-div">{ highlight bash %}
+<div id="code-div">{% highlight bash %}
 $ mv bravo_update.dat bravo_update.tar.gz
 $ tar xvzf bravo_update.tar.gz
 {% endhighlight %}</div>
 This uncompresses another Firmware_Update folder, cd in to it.
-<div id="code-div">{ highlight bash %}$ cd Firmware_Update{% endhighlight %}</div>
+<div id="code-div">{% highlight bash %}$ cd Firmware_Update{% endhighlight %}</div>
 if you pwd, you'll be in Firmware_Update/Firmware_Update
 
 <span style="font-weight:bold;">6. Extract root.tgz</span>
-<div id="code-div">{ highlight bash %}
+<div id="code-div">{% highlight bash %}
 $ tar xvzf root.tgz
 {% endhighlight %}</div>
 this uncompresses a lot of stuff. All of the Android system image actually.  Later we will re-compress the system folder to create the system.img
@@ -72,19 +72,19 @@ I did this from the GUI, right click on file and select "Extract here".
 $ cd services
 
 <span style="font-weight:bold;">8. disassemble the file classes.dex with baksmai</span>
-<div id="code-div">{ highlight bash %}$ baksmali classes.dex{% endhighlight %}</div>This create out/
+<div id="code-div">{% highlight bash %}$ baksmali classes.dex{% endhighlight %}</div>This create out/
 
 <span style="font-weight:bold;">9. vi out/com/android/server/ServerThread.smali</span>
 delete the line 
-<div id="code-div">{ highlight bash %}if-lt v0, v1, :cond_483{% endhighlight %}</div>
+<div id="code-div">{% highlight bash %}if-lt v0, v1, :cond_483{% endhighlight %}</div>
 (for the vi-newbies, you can search in vi by typing a forward slash and typing in a phrase like "if\-lt", then type dd, to delete the line, and ":wq" to write the file and quit)
 
 <span style="font-weight:bold;">10. reassemble the file with 
 </span>
-<div id="code-div">{ highlight bash %}$ smali out{% endhighlight %}</div>
+<div id="code-div">{% highlight bash %}$ smali out{% endhighlight %}</div>
 
 <span style="font-weight:bold;">11. Replace the old classes.dex with this re-assembled file:</span>
-<div id="code-div">{ highlight bash %}mv out.dex classes.dex{% endhighlight %}</div>
+<div id="code-div">{% highlight bash %}mv out.dex classes.dex{% endhighlight %}</div>
 
 <span style="font-weight:bold;">12. delete the old out/ directory and re-jar the contents of the services folder</span>, but the not the services folder itself.
 (I moved the META-INF folder and classes.dex out of the services directory and into the parent framework directory. Removed the empty services directory. Right clicked the classes.dex and selected "compress", and selected as name "services" and type as "jar" file, then I dragged the META-INF file onto the new services.jar. Yes, I know there is a better way, but I'm kind of new to jar files...)
@@ -92,7 +92,7 @@ delete the line
 
 <h4>Now we are going to build an android AVD, so we can extract a single file to use back in this system.</h4>
 <span style="font-weight:bold;">13. if your android SDK tools are in your path Run</span>,
-{ highlight bash %}android{% endhighlight %}
+{% highlight bash %}android{% endhighlight %}
 else find the android command and run it, or run it from eclipse.
 
 This starts the Android SDK and AVD Manager.  To create a new AVD, click New...
@@ -104,7 +104,7 @@ click "Create AVD".
 Then click "Details" to see where it was created.  It should be at ~/.android/avd/nook.avd
 
 <span style="font-weight:bold;">14. unyaffs the system.img and grab a file</span>
-<div id="code-div">{ highlight bash %}
+<div id="code-div">{% highlight bash %}
 cd ~/nook_dev/
 mkdir sys_img
 cd sys_img
@@ -114,20 +114,20 @@ cp lib/libaudioflinger.so ~/nook_dev/Firmware_Update/Firmware_Update/system/lib/
 {% endhighlight %}</div>
 
 <span style="font-weight:bold;">15. re-create the system.img with the new audio file.</span>
-<div id="code-div">{ highlight bash %}
+<div id="code-div">{% highlight bash %}
 cd ~/nook_dev/Firmware_Update/Firmware_Update/
 mkyaffs2image ./system/ system.img
 {% endhighlight %}</div>this creates a new system.img
 
 <span style="font-weight:bold;">16. Sketchy step where you overwrite the good Android 1.5 platform system.img in your Android SDK with this new one.</span>
-<div id="code-div">{ highlight bash %}
+<div id="code-div">{% highlight bash %}
 mv ~/android-sdk-linux_86/platforms/android-3/images/system.img ~/android-sdk-linux_86/platforms/android-3/images/good.img 
 cp ~/nook_dev/Firmware_Update/Firmware_Update/system.img ~/android-sdk-linux_86/platforms/android-3/images/system.img 
 {% endhighlight %}</div>
 <span style="font-weight:bold;">Remember to change this back later if you want to do non-nook related Android Development.</span>
 
 <span style="font-weight:bold;">17. run the emulator!</span>
-<div id="code-div">{ highlight bash %}
+<div id="code-div">{% highlight bash %}
 emulator @nook -shell -show-kernel -verbose
 {% endhighlight %}</div>
 
