--- a/_posts/2011-11-28-awk-one-liners.html
+++ b/_posts/2011-11-28-awk-one-liners.html
@@ -23,12 +23,12 @@ This prints out a two column list of files sizes and file names.  I wanted to tu
 
 <h2>AWK to the Rescue</h2>
 This print just the file sizes:
-{ highlight bash %}
+{% highlight bash %}
 $ du -s /var/lib/mysql/* | sort n | awk '{print $1}'
 {% endhighlight %}
 
 This prints the file name first, comma, file size:
-{ highlight bash %}
+{% highlight bash %}
 $ du -s /var/lib/mysql/* | sort n | awk '{print $2 ", " $1}'
 
 u_labs2, 6040
@@ -42,6 +42,6 @@ ibdata1, 248056
 
 You can either cut and paste the output into a spread sheet or redirect it into a csv like so:
 
-{ highlight bash %}
+{% highlight bash %}
 $ du -s /var/lib/mysql/* | sort n | awk '{print $2 ", " $1}' > db-sizes.csv
 {% endhighlight %}
