--- a/_posts/2012-04-02-sas-notes.html
+++ b/_posts/2012-04-02-sas-notes.html
@@ -8,7 +8,7 @@ category: Data Analysis
 <h2>The Data Step</h2>
 <h3>Subsetting IF</h3>
 In a Data Step you can exclude some observations from the dataset with an if statement.
-{ highlight s %}
+{% highlight s %}
 data tornados_1980s;
   infile FileName;
   input year city damages;
@@ -18,19 +18,19 @@ run;
 { endhighlight %}
 
 <li> IF .. IN statement
-{ highlight s %}
+{% highlight s %}
 if year in (1980, 1981, 1982);
 { endhighlight %}
 
 <li> AND, OR 
-{ highlight s %}
+{% highlight s %}
 if year = '1980' and city = 'Baltimore';
 { endhighlight %} 
 
 
 <h3>infile 'filename'</h3>
 In the data step, import data from a file with the infile command.
-{ highlight s %}
+{% highlight s %}
 data tornados;
   infile 'tornados.dat';
   input year city cost;
@@ -42,7 +42,7 @@ run;
   set.
 The following creates a dataset of 1980s tornado data from the larger
 set of tornado data.
-{ highlight s %}
+{% highlight s %}
 data tornados_1980s;
   set tornados;
   if 1980 <= year <= 1989;
@@ -53,7 +53,7 @@ run;
 <h3>PROC SORT</h3>
 <li> The sort procedure, sorts data. You can sort by multiple fields.
 <li> Also you can print by a field.
-{ highlight s %}
+{% highlight s %}
 proc sort data=tornados;
   by year city;
 proc print data=tornados;
@@ -63,7 +63,7 @@ run;
 
 <h3>PROC Univariate</h3>
 PROC Univariate generates descriptive statistics
-{ highlight s %}
+{% highlight s %}
 proc univariate data=tornados;
   histogram year;
 run;
@@ -74,7 +74,7 @@ Use proc means when you are only interested in basic descriptive statistics.
 <h3>PROC freq</h3>
 <li> generates tables for data in categories.
 <h3>PROC gplot</h3>
-{ highlight s %}
+{% highlight s %}
 proc gplot data=tornados;
   plot year*cost;
   title 'Year by Cost tornados';
@@ -83,7 +83,7 @@ run;
 
 <h3>PROC corr</h3>
 <h4>compute the correlation</h4>
-{ highlight s %}
+{% highlight s %}
 proc corr data=grades;
   var exam1 exam2 hwscore;
 run;
@@ -94,7 +94,7 @@ run;
 <li> r: same as p, plus more
 <li> clm: 95% conf interval for mean of each obs
 <li> cli: 95% prediction intervals.
-{ highlight s %}
+{% highlight s %}
 proc reg data=grades;
   model final=exam1 hwscore / p r cli clm;
   plot final*hwscore;
@@ -105,7 +105,7 @@ run;
 <h3>Variable Selection</h3>
 SAS has several methods for selecting variables
 
-{ highlight s %}
+{% highlight s %}
 proc reg data=cdi;
   model y = x1-x8 /selection=rsquare best=1;
   model y = x1-x8 /selection=adjrsq best=5;
